--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://github.com/CodeWith-Het/react-components.git",
-  "homepage": "https://codewith-het.github.io/React-Basic/"
+  "homepage": "https://codewith-het.github.io/React-Basic/",
 
   "scripts": {
     "dev": "vite",
@@ -36,7 +36,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.1.0",
-     "gh-pages": "^6.1.1"
+    "vite": "^7.1.0"
   }
 }
